grammar.output
Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmts stmt
    3      | stmt

    4 stmt: decl_stmt
    5     | assign_stmt
    6     | input_stmt
    7     | output_stmt
    8     | when_stmt
    9     | loop_stmt

   10 decl_stmt: GLOBAL mut_type IDENT COLON data_type
   11          | GLOBAL mut_type IDENT COLON EQUAL value
   12          | mut_type IDENT COLON data_type
   13          | mut_type IDENT COLON data_type EQUAL value

   14 mut_type: FIXED
   15         | FLEX

   16 assign_stmt: IDENT EQUAL value

   17 value: input_stmt
   18      | expression
   19      | STR
   20      | CHR
   21      | BOOL
   22      | NIL

   23 input_stmt: INPUT "(" string_consts ")"
   24           | INPUT "(" ")"

   25 output_stmt: OUTPUT "(" string_consts ")"
   26            | OUTPUT "(" ")"

   27 string_consts: string_consts "&" string_const
   28              | string_const

   29 string_const: expression
   30             | STR
   31             | CHR

   32 when_stmt: WHEN expression COLON INDENT stmt DEDENT else_stmt

   33 else_stmt: ELSE WHEN expression COLON INDENT stmt DEDENT else_stmt
   34          | ELSE COLON INDENT stmt DEDENT
   35          | ε

   36 loop_stmt: LOOP IDENT "in" "(" expression ")" COLON INDENT stmt DEDENT
   37          | LOOP IDENT "in" "(" expression "to" expression ")" COLON INDENT stmt DEDENT
   38          | LOOP IDENT "in" "(" expression "to" expression "by" expression ")" COLON INDENT stmt DEDENT

   39 data_type: "int"
   40          | "dbl"
   41          | "str"
   42          | "chr"
   43          | "bool"
   44          | "nil"c:\Users\PC\Documents\ken\COLLEGE\BSCS 3-2\Principles of Programming Language\G5-CZAR-FINAL.pdf

   45 expression: expression OR conjunction
   46           | conjunction

   47 conjunction: conjunction AND equality
   48            | equality

   49 equality: equality EQUALS relational
   50         | equality NOTEQUALS relational
   51         | relational

   52 relational: relational GREATER abs
   53           | relational GREATEREQUAL abs
   54           | relational LESS abs
   55           | relational LESSEQUAL abs
   56           | abs

   57 abs: ABS abs ABS
   58    | term

   59 term: term PLUS factor
   60     | term MINUS factor
   61     | factor

   62 factor: factor TIMES power
   63       | factor DIVIDE power
   64       | factor MODULO power
   65       | power

   66 power: power POW unary
   67      | unary

   68 unary: NOT unary
   69      | MINUS unary
   70      | literal

   71 literal: "(" expression ")"
   72        | INT
   73        | DBL
   74        | "true"
   75        | "false"
   76        | IDENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENT <str> (258) 10 11 12 13 16 36 37 38 76
    STR <str> (259) 19 30
    CHR <str> (260) 20 31
    BOOL <str> (261) 21
    NIL <str> (262) 22
    INT <str> (263) 72
    DBL <str> (264) 73
    INDENT <str> (265) 32 33 34 36 37 38
    DEDENT <str> (266) 32 33 34 36 37 38
    GLOBAL (267) 10 11
    FIXED (268) 14
    FLEX (269) 15
    INPUT (270) 23 24
    OUTPUT (271) 25 26
    WHEN (272) 32 33
    ELSE (273) 33 34
    LOOP (274) 36 37 38
    AND (275) 47
    OR (276) 45
    EQUALS (277) 49
    NOTEQUALS (278) 50
    GREATER (279) 52
    GREATEREQUAL (280) 53
    LESS (281) 54
    LESSEQUAL (282) 55
    PLUS (283) 59
    MINUS (284) 60 69
    TIMES (285) 62
    DIVIDE (286) 63
    MODULO (287) 64
    POW (288) 66
    NOT (289) 68
    ABS (290) 57
    COLON (291) 10 11 12 13 32 33 34 36 37 38
    EQUAL (292) 11 13 16
    "(" (293) 23 24 25 26 36 37 38 71
    ")" (294) 23 24 25 26 36 37 38 71
    "&" (295) 27
    "in" (296) 36 37 38
    "to" (297) 37 38
    "by" (298) 38
    "int" (299) 39
    "dbl" (300) 40
    "str" (301) 41
    "chr" (302) 42
    "bool" (303) 43
    "nil" (304) 44
    "true" (305) 74
    "false" (306) 75


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    program <str> (53)
        on left: 1
        on right: 0
    stmts <str> (54)
        on left: 2 3
        on right: 1 2
    stmt <str> (55)
        on left: 4 5 6 7 8 9
        on right: 2 3 32 33 34 36 37 38
    decl_stmt <str> (56)
        on left: 10 11 12 13
        on right: 4
    mut_type <str> (57)
        on left: 14 15
        on right: 10 11 12 13
    assign_stmt <str> (58)
        on left: 16
        on right: 5
    value <str> (59)
        on left: 17 18 19 20 21 22
        on right: 11 13 16
    input_stmt <str> (60)
        on left: 23 24
        on right: 6 17
    output_stmt <str> (61)
        on left: 25 26
        on right: 7
    string_consts <str> (62)
        on left: 27 28
        on right: 23 25 27
    string_const <str> (63)
        on left: 29 30 31
        on right: 27 28
    when_stmt <str> (64)
        on left: 32
        on right: 8
    else_stmt <str> (65)
        on left: 33 34 35
        on right: 32 33
    loop_stmt <str> (66)
        on left: 36 37 38
        on right: 9
    data_type <str> (67)
        on left: 39 40 41 42 43 44
        on right: 10 12 13
    expression <str> (68)
        on left: 45 46
        on right: 18 29 32 33 36 37 38 45 71
    conjunction <str> (69)
        on left: 47 48
        on right: 45 46 47
    equality <str> (70)
        on left: 49 50 51
        on right: 47 48 49 50
    relational <str> (71)
        on left: 52 53 54 55 56
        on right: 49 50 51 52 53 54 55
    abs <str> (72)
        on left: 57 58
        on right: 52 53 54 55 56 57
    term <str> (73)
        on left: 59 60 61
        on right: 58 59 60
    factor <str> (74)
        on left: 62 63 64 65
        on right: 59 60 61 62 63 64
    power <str> (75)
        on left: 66 67
        on right: 62 63 64 65 66
    unary <str> (76)
        on left: 68 69 70
        on right: 66 67 68 69
    literal <str> (77)
        on left: 71 72 73 74 75 76
        on right: 70


State 0

    0 $accept: • program $end
    1 program: • stmts
    2 stmts: • stmts stmt
    3      | • stmt
    4 stmt: • decl_stmt
    5     | • assign_stmt
    6     | • input_stmt
    7     | • output_stmt
    8     | • when_stmt
    9     | • loop_stmt
   10 decl_stmt: • GLOBAL mut_type IDENT COLON data_type
   11          | • GLOBAL mut_type IDENT COLON EQUAL value
   12          | • mut_type IDENT COLON data_type
   13          | • mut_type IDENT COLON data_type EQUAL value
   14 mut_type: • FIXED
   15         | • FLEX
   16 assign_stmt: • IDENT EQUAL value
   23 input_stmt: • INPUT "(" string_consts ")"
   24           | • INPUT "(" ")"
   25 output_stmt: • OUTPUT "(" string_consts ")"
   26            | • OUTPUT "(" ")"
   32 when_stmt: • WHEN expression COLON INDENT stmt DEDENT else_stmt
   36 loop_stmt: • LOOP IDENT "in" "(" expression ")" COLON INDENT stmt DEDENT
   37          | • LOOP IDENT "in" "(" expression "to" expression ")" COLON INDENT stmt DEDENT
   38          | • LOOP IDENT "in" "(" expression "to" expression "by" expression ")" COLON INDENT stmt DEDENT

    IDENT   shift, and go to state 1
    GLOBAL  shift, and go to state 2
    FIXED   shift, and go to state 3
    FLEX    shift, and go to state 4
    INPUT   shift, and go to state 5
    OUTPUT  shift, and go to state 6
    WHEN    shift, and go to state 7
    LOOP    shift, and go to state 8

    program      go to state 9
    stmts        go to state 10
    stmt         go to state 11
    decl_stmt    go to state 12
    mut_type     go to state 13
    assign_stmt  go to state 14
    input_stmt   go to state 15
    output_stmt  go to state 16
    when_stmt    go to state 17
    loop_stmt    go to state 18


State 1

   16 assign_stmt: IDENT • EQUAL value

    EQUAL  shift, and go to state 19


State 2

   10 decl_stmt: GLOBAL • mut_type IDENT COLON data_type
   11          | GLOBAL • mut_type IDENT COLON EQUAL value
   14 mut_type: • FIXED
   15         | • FLEX

    FIXED  shift, and go to state 3
    FLEX   shift, and go to state 4

    mut_type  go to state 20


State 3

   14 mut_type: FIXED •

    $default  reduce using rule 14 (mut_type)


State 4

   15 mut_type: FLEX •

    $default  reduce using rule 15 (mut_type)


State 5

   23 input_stmt: INPUT • "(" string_consts ")"
   24           | INPUT • "(" ")"

    "("  shift, and go to state 21


State 6

   25 output_stmt: OUTPUT • "(" string_consts ")"
   26            | OUTPUT • "(" ")"

    "("  shift, and go to state 22


State 7

   32 when_stmt: WHEN • expression COLON INDENT stmt DEDENT else_stmt
   45 expression: • expression OR conjunction
   46           | • conjunction
   47 conjunction: • conjunction AND equality
   48            | • equality
   49 equality: • equality EQUALS relational
   50         | • equality NOTEQUALS relational
   51         | • relational
   52 relational: • relational GREATER abs
   53           | • relational GREATEREQUAL abs
   54           | • relational LESS abs
   55           | • relational LESSEQUAL abs
   56           | • abs
   57 abs: • ABS abs ABS
   58    | • term
   59 term: • term PLUS factor
   60     | • term MINUS factor
   61     | • factor
   62 factor: • factor TIMES power
   63       | • factor DIVIDE power
   64       | • factor MODULO power
   65       | • power
   66 power: • power POW unary
   67      | • unary
   68 unary: • NOT unary
   69      | • MINUS unary
   70      | • literal
   71 literal: • "(" expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    ABS      shift, and go to state 28
    "("      shift, and go to state 29
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31

    expression   go to state 32
    conjunction  go to state 33
    equality     go to state 34
    relational   go to state 35
    abs          go to state 36
    term         go to state 37
    factor       go to state 38
    power        go to state 39
    unary        go to state 40
    literal      go to state 41


State 8

   36 loop_stmt: LOOP • IDENT "in" "(" expression ")" COLON INDENT stmt DEDENT
   37          | LOOP • IDENT "in" "(" expression "to" expression ")" COLON INDENT stmt DEDENT
   38          | LOOP • IDENT "in" "(" expression "to" expression "by" expression ")" COLON INDENT stmt DEDENT

    IDENT  shift, and go to state 42


State 9

    0 $accept: program • $end

    $end  shift, and go to state 43


State 10

    1 program: stmts •
    2 stmts: stmts • stmt
    4 stmt: • decl_stmt
    5     | • assign_stmt
    6     | • input_stmt
    7     | • output_stmt
    8     | • when_stmt
    9     | • loop_stmt
   10 decl_stmt: • GLOBAL mut_type IDENT COLON data_type
   11          | • GLOBAL mut_type IDENT COLON EQUAL value
   12          | • mut_type IDENT COLON data_type
   13          | • mut_type IDENT COLON data_type EQUAL value
   14 mut_type: • FIXED
   15         | • FLEX
   16 assign_stmt: • IDENT EQUAL value
   23 input_stmt: • INPUT "(" string_consts ")"
   24           | • INPUT "(" ")"
   25 output_stmt: • OUTPUT "(" string_consts ")"
   26            | • OUTPUT "(" ")"
   32 when_stmt: • WHEN expression COLON INDENT stmt DEDENT else_stmt
   36 loop_stmt: • LOOP IDENT "in" "(" expression ")" COLON INDENT stmt DEDENT
   37          | • LOOP IDENT "in" "(" expression "to" expression ")" COLON INDENT stmt DEDENT
   38          | • LOOP IDENT "in" "(" expression "to" expression "by" expression ")" COLON INDENT stmt DEDENT

    IDENT   shift, and go to state 1
    GLOBAL  shift, and go to state 2
    FIXED   shift, and go to state 3
    FLEX    shift, and go to state 4
    INPUT   shift, and go to state 5
    OUTPUT  shift, and go to state 6
    WHEN    shift, and go to state 7
    LOOP    shift, and go to state 8

    $default  reduce using rule 1 (program)

    stmt         go to state 44
    decl_stmt    go to state 12
    mut_type     go to state 13
    assign_stmt  go to state 14
    input_stmt   go to state 15
    output_stmt  go to state 16
    when_stmt    go to state 17
    loop_stmt    go to state 18


State 11

    3 stmts: stmt •

    $default  reduce using rule 3 (stmts)


State 12

    4 stmt: decl_stmt •

    $default  reduce using rule 4 (stmt)


State 13

   12 decl_stmt: mut_type • IDENT COLON data_type
   13          | mut_type • IDENT COLON data_type EQUAL value

    IDENT  shift, and go to state 45


State 14

    5 stmt: assign_stmt •

    $default  reduce using rule 5 (stmt)


State 15

    6 stmt: input_stmt •

    $default  reduce using rule 6 (stmt)


State 16

    7 stmt: output_stmt •

    $default  reduce using rule 7 (stmt)


State 17

    8 stmt: when_stmt •

    $default  reduce using rule 8 (stmt)


State 18

    9 stmt: loop_stmt •

    $default  reduce using rule 9 (stmt)


State 19

   16 assign_stmt: IDENT EQUAL • value
   17 value: • input_stmt
   18      | • expression
   19      | • STR
   20      | • CHR
   21      | • BOOL
   22      | • NIL
   23 input_stmt: • INPUT "(" string_consts ")"
   24           | • INPUT "(" ")"
   45 expression: • expression OR conjunction
   46           | • conjunction
   47 conjunction: • conjunction AND equality
   48            | • equality
   49 equality: • equality EQUALS relational
   50         | • equality NOTEQUALS relational
   51         | • relational
   52 relational: • relational GREATER abs
   53           | • relational GREATEREQUAL abs
   54           | • relational LESS abs
   55           | • relational LESSEQUAL abs
   56           | • abs
   57 abs: • ABS abs ABS
   58    | • term
   59 term: • term PLUS factor
   60     | • term MINUS factor
   61     | • factor
   62 factor: • factor TIMES power
   63       | • factor DIVIDE power
   64       | • factor MODULO power
   65       | • power
   66 power: • power POW unary
   67      | • unary
   68 unary: • NOT unary
   69      | • MINUS unary
   70      | • literal
   71 literal: • "(" expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    STR      shift, and go to state 46
    CHR      shift, and go to state 47
    BOOL     shift, and go to state 48
    NIL      shift, and go to state 49
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    INPUT    shift, and go to state 5
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    ABS      shift, and go to state 28
    "("      shift, and go to state 29
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31

    value        go to state 50
    input_stmt   go to state 51
    expression   go to state 52
    conjunction  go to state 33
    equality     go to state 34
    relational   go to state 35
    abs          go to state 36
    term         go to state 37
    factor       go to state 38
    power        go to state 39
    unary        go to state 40
    literal      go to state 41


State 20

   10 decl_stmt: GLOBAL mut_type • IDENT COLON data_type
   11          | GLOBAL mut_type • IDENT COLON EQUAL value

    IDENT  shift, and go to state 53


State 21

   23 input_stmt: INPUT "(" • string_consts ")"
   24           | INPUT "(" • ")"
   27 string_consts: • string_consts "&" string_const
   28              | • string_const
   29 string_const: • expression
   30             | • STR
   31             | • CHR
   45 expression: • expression OR conjunction
   46           | • conjunction
   47 conjunction: • conjunction AND equality
   48            | • equality
   49 equality: • equality EQUALS relational
   50         | • equality NOTEQUALS relational
   51         | • relational
   52 relational: • relational GREATER abs
   53           | • relational GREATEREQUAL abs
   54           | • relational LESS abs
   55           | • relational LESSEQUAL abs
   56           | • abs
   57 abs: • ABS abs ABS
   58    | • term
   59 term: • term PLUS factor
   60     | • term MINUS factor
   61     | • factor
   62 factor: • factor TIMES power
   63       | • factor DIVIDE power
   64       | • factor MODULO power
   65       | • power
   66 power: • power POW unary
   67      | • unary
   68 unary: • NOT unary
   69      | • MINUS unary
   70      | • literal
   71 literal: • "(" expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    STR      shift, and go to state 54
    CHR      shift, and go to state 55
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    ABS      shift, and go to state 28
    "("      shift, and go to state 29
    ")"      shift, and go to state 56
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31

    string_consts  go to state 57
    string_const   go to state 58
    expression     go to state 59
    conjunction    go to state 33
    equality       go to state 34
    relational     go to state 35
    abs            go to state 36
    term           go to state 37
    factor         go to state 38
    power          go to state 39
    unary          go to state 40
    literal        go to state 41


State 22

   25 output_stmt: OUTPUT "(" • string_consts ")"
   26            | OUTPUT "(" • ")"
   27 string_consts: • string_consts "&" string_const
   28              | • string_const
   29 string_const: • expression
   30             | • STR
   31             | • CHR
   45 expression: • expression OR conjunction
   46           | • conjunction
   47 conjunction: • conjunction AND equality
   48            | • equality
   49 equality: • equality EQUALS relational
   50         | • equality NOTEQUALS relational
   51         | • relational
   52 relational: • relational GREATER abs
   53           | • relational GREATEREQUAL abs
   54           | • relational LESS abs
   55           | • relational LESSEQUAL abs
   56           | • abs
   57 abs: • ABS abs ABS
   58    | • term
   59 term: • term PLUS factor
   60     | • term MINUS factor
   61     | • factor
   62 factor: • factor TIMES power
   63       | • factor DIVIDE power
   64       | • factor MODULO power
   65       | • power
   66 power: • power POW unary
   67      | • unary
   68 unary: • NOT unary
   69      | • MINUS unary
   70      | • literal
   71 literal: • "(" expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    STR      shift, and go to state 54
    CHR      shift, and go to state 55
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    ABS      shift, and go to state 28
    "("      shift, and go to state 29
    ")"      shift, and go to state 60
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31

    string_consts  go to state 61
    string_const   go to state 58
    expression     go to state 59
    conjunction    go to state 33
    equality       go to state 34
    relational     go to state 35
    abs            go to state 36
    term           go to state 37
    factor         go to state 38
    power          go to state 39
    unary          go to state 40
    literal        go to state 41


State 23

   76 literal: IDENT •

    $default  reduce using rule 76 (literal)


State 24

   72 literal: INT •

    $default  reduce using rule 72 (literal)


State 25

   73 literal: DBL •

    $default  reduce using rule 73 (literal)


State 26

   68 unary: • NOT unary
   69      | • MINUS unary
   69      | MINUS • unary
   70      | • literal
   71 literal: • "(" expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    "("      shift, and go to state 29
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31

    unary    go to state 62
    literal  go to state 41


State 27

   68 unary: • NOT unary
   68      | NOT • unary
   69      | • MINUS unary
   70      | • literal
   71 literal: • "(" expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    "("      shift, and go to state 29
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31

    unary    go to state 63
    literal  go to state 41


State 28

   57 abs: • ABS abs ABS
   57    | ABS • abs ABS
   58    | • term
   59 term: • term PLUS factor
   60     | • term MINUS factor
   61     | • factor
   62 factor: • factor TIMES power
   63       | • factor DIVIDE power
   64       | • factor MODULO power
   65       | • power
   66 power: • power POW unary
   67      | • unary
   68 unary: • NOT unary
   69      | • MINUS unary
   70      | • literal
   71 literal: • "(" expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    ABS      shift, and go to state 28
    "("      shift, and go to state 29
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31

    abs      go to state 64
    term     go to state 37
    factor   go to state 38
    power    go to state 39
    unary    go to state 40
    literal  go to state 41


State 29

   45 expression: • expression OR conjunction
   46           | • conjunction
   47 conjunction: • conjunction AND equality
   48            | • equality
   49 equality: • equality EQUALS relational
   50         | • equality NOTEQUALS relational
   51         | • relational
   52 relational: • relational GREATER abs
   53           | • relational GREATEREQUAL abs
   54           | • relational LESS abs
   55           | • relational LESSEQUAL abs
   56           | • abs
   57 abs: • ABS abs ABS
   58    | • term
   59 term: • term PLUS factor
   60     | • term MINUS factor
   61     | • factor
   62 factor: • factor TIMES power
   63       | • factor DIVIDE power
   64       | • factor MODULO power
   65       | • power
   66 power: • power POW unary
   67      | • unary
   68 unary: • NOT unary
   69      | • MINUS unary
   70      | • literal
   71 literal: • "(" expression ")"
   71        | "(" • expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    ABS      shift, and go to state 28
    "("      shift, and go to state 29
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31

    expression   go to state 65
    conjunction  go to state 33
    equality     go to state 34
    relational   go to state 35
    abs          go to state 36
    term         go to state 37
    factor       go to state 38
    power        go to state 39
    unary        go to state 40
    literal      go to state 41


State 30

   74 literal: "true" •

    $default  reduce using rule 74 (literal)


State 31

   75 literal: "false" •

    $default  reduce using rule 75 (literal)


State 32

   32 when_stmt: WHEN expression • COLON INDENT stmt DEDENT else_stmt
   45 expression: expression • OR conjunction

    OR     shift, and go to state 66
    COLON  shift, and go to state 67


State 33

   46 expression: conjunction •
   47 conjunction: conjunction • AND equality

    AND  shift, and go to state 68

    $default  reduce using rule 46 (expression)


State 34

   48 conjunction: equality •
   49 equality: equality • EQUALS relational
   50         | equality • NOTEQUALS relational

    EQUALS     shift, and go to state 69
    NOTEQUALS  shift, and go to state 70

    $default  reduce using rule 48 (conjunction)


State 35

   51 equality: relational •
   52 relational: relational • GREATER abs
   53           | relational • GREATEREQUAL abs
   54           | relational • LESS abs
   55           | relational • LESSEQUAL abs

    GREATER       shift, and go to state 71
    GREATEREQUAL  shift, and go to state 72
    LESS          shift, and go to state 73
    LESSEQUAL     shift, and go to state 74

    $default  reduce using rule 51 (equality)


State 36

   56 relational: abs •

    $default  reduce using rule 56 (relational)


State 37

   58 abs: term •
   59 term: term • PLUS factor
   60     | term • MINUS factor

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76

    $default  reduce using rule 58 (abs)


State 38

   61 term: factor •
   62 factor: factor • TIMES power
   63       | factor • DIVIDE power
   64       | factor • MODULO power

    TIMES   shift, and go to state 77
    DIVIDE  shift, and go to state 78
    MODULO  shift, and go to state 79

    $default  reduce using rule 61 (term)


State 39

   65 factor: power •
   66 power: power • POW unary

    POW  shift, and go to state 80

    $default  reduce using rule 65 (factor)


State 40

   67 power: unary •

    $default  reduce using rule 67 (power)


State 41

   70 unary: literal •

    $default  reduce using rule 70 (unary)


State 42

   36 loop_stmt: LOOP IDENT • "in" "(" expression ")" COLON INDENT stmt DEDENT
   37          | LOOP IDENT • "in" "(" expression "to" expression ")" COLON INDENT stmt DEDENT
   38          | LOOP IDENT • "in" "(" expression "to" expression "by" expression ")" COLON INDENT stmt DEDENT

    "in"  shift, and go to state 81


State 43

    0 $accept: program $end •

    $default  accept


State 44

    2 stmts: stmts stmt •

    $default  reduce using rule 2 (stmts)


State 45

   12 decl_stmt: mut_type IDENT • COLON data_type
   13          | mut_type IDENT • COLON data_type EQUAL value

    COLON  shift, and go to state 82


State 46

   19 value: STR •

    $default  reduce using rule 19 (value)


State 47

   20 value: CHR •

    $default  reduce using rule 20 (value)


State 48

   21 value: BOOL •

    $default  reduce using rule 21 (value)


State 49

   22 value: NIL •

    $default  reduce using rule 22 (value)


State 50

   16 assign_stmt: IDENT EQUAL value •

    $default  reduce using rule 16 (assign_stmt)


State 51

   17 value: input_stmt •

    $default  reduce using rule 17 (value)


State 52

   18 value: expression •
   45 expression: expression • OR conjunction

    OR  shift, and go to state 66

    $default  reduce using rule 18 (value)


State 53

   10 decl_stmt: GLOBAL mut_type IDENT • COLON data_type
   11          | GLOBAL mut_type IDENT • COLON EQUAL value

    COLON  shift, and go to state 83


State 54

   30 string_const: STR •

    $default  reduce using rule 30 (string_const)


State 55

   31 string_const: CHR •

    $default  reduce using rule 31 (string_const)


State 56

   24 input_stmt: INPUT "(" ")" •

    $default  reduce using rule 24 (input_stmt)


State 57

   23 input_stmt: INPUT "(" string_consts • ")"
   27 string_consts: string_consts • "&" string_const

    ")"  shift, and go to state 84
    "&"  shift, and go to state 85


State 58

   28 string_consts: string_const •

    $default  reduce using rule 28 (string_consts)


State 59

   29 string_const: expression •
   45 expression: expression • OR conjunction

    OR  shift, and go to state 66

    $default  reduce using rule 29 (string_const)


State 60

   26 output_stmt: OUTPUT "(" ")" •

    $default  reduce using rule 26 (output_stmt)


State 61

   25 output_stmt: OUTPUT "(" string_consts • ")"
   27 string_consts: string_consts • "&" string_const

    ")"  shift, and go to state 86
    "&"  shift, and go to state 85


State 62

   69 unary: MINUS unary •

    $default  reduce using rule 69 (unary)


State 63

   68 unary: NOT unary •

    $default  reduce using rule 68 (unary)


State 64

   57 abs: ABS abs • ABS

    ABS  shift, and go to state 87


State 65

   45 expression: expression • OR conjunction
   71 literal: "(" expression • ")"

    OR   shift, and go to state 66
    ")"  shift, and go to state 88


State 66

   45 expression: expression OR • conjunction
   47 conjunction: • conjunction AND equality
   48            | • equality
   49 equality: • equality EQUALS relational
   50         | • equality NOTEQUALS relational
   51         | • relational
   52 relational: • relational GREATER abs
   53           | • relational GREATEREQUAL abs
   54           | • relational LESS abs
   55           | • relational LESSEQUAL abs
   56           | • abs
   57 abs: • ABS abs ABS
   58    | • term
   59 term: • term PLUS factor
   60     | • term MINUS factor
   61     | • factor
   62 factor: • factor TIMES power
   63       | • factor DIVIDE power
   64       | • factor MODULO power
   65       | • power
   66 power: • power POW unary
   67      | • unary
   68 unary: • NOT unary
   69      | • MINUS unary
   70      | • literal
   71 literal: • "(" expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    ABS      shift, and go to state 28
    "("      shift, and go to state 29
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31

    conjunction  go to state 89
    equality     go to state 34
    relational   go to state 35
    abs          go to state 36
    term         go to state 37
    factor       go to state 38
    power        go to state 39
    unary        go to state 40
    literal      go to state 41


State 67

   32 when_stmt: WHEN expression COLON • INDENT stmt DEDENT else_stmt

    INDENT  shift, and go to state 90


State 68

   47 conjunction: conjunction AND • equality
   49 equality: • equality EQUALS relational
   50         | • equality NOTEQUALS relational
   51         | • relational
   52 relational: • relational GREATER abs
   53           | • relational GREATEREQUAL abs
   54           | • relational LESS abs
   55           | • relational LESSEQUAL abs
   56           | • abs
   57 abs: • ABS abs ABS
   58    | • term
   59 term: • term PLUS factor
   60     | • term MINUS factor
   61     | • factor
   62 factor: • factor TIMES power
   63       | • factor DIVIDE power
   64       | • factor MODULO power
   65       | • power
   66 power: • power POW unary
   67      | • unary
   68 unary: • NOT unary
   69      | • MINUS unary
   70      | • literal
   71 literal: • "(" expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    ABS      shift, and go to state 28
    "("      shift, and go to state 29
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31

    equality    go to state 91
    relational  go to state 35
    abs         go to state 36
    term        go to state 37
    factor      go to state 38
    power       go to state 39
    unary       go to state 40
    literal     go to state 41


State 69

   49 equality: equality EQUALS • relational
   52 relational: • relational GREATER abs
   53           | • relational GREATEREQUAL abs
   54           | • relational LESS abs
   55           | • relational LESSEQUAL abs
   56           | • abs
   57 abs: • ABS abs ABS
   58    | • term
   59 term: • term PLUS factor
   60     | • term MINUS factor
   61     | • factor
   62 factor: • factor TIMES power
   63       | • factor DIVIDE power
   64       | • factor MODULO power
   65       | • power
   66 power: • power POW unary
   67      | • unary
   68 unary: • NOT unary
   69      | • MINUS unary
   70      | • literal
   71 literal: • "(" expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    ABS      shift, and go to state 28
    "("      shift, and go to state 29
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31

    relational  go to state 92
    abs         go to state 36
    term        go to state 37
    factor      go to state 38
    power       go to state 39
    unary       go to state 40
    literal     go to state 41


State 70

   50 equality: equality NOTEQUALS • relational
   52 relational: • relational GREATER abs
   53           | • relational GREATEREQUAL abs
   54           | • relational LESS abs
   55           | • relational LESSEQUAL abs
   56           | • abs
   57 abs: • ABS abs ABS
   58    | • term
   59 term: • term PLUS factor
   60     | • term MINUS factor
   61     | • factor
   62 factor: • factor TIMES power
   63       | • factor DIVIDE power
   64       | • factor MODULO power
   65       | • power
   66 power: • power POW unary
   67      | • unary
   68 unary: • NOT unary
   69      | • MINUS unary
   70      | • literal
   71 literal: • "(" expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    ABS      shift, and go to state 28
    "("      shift, and go to state 29
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31

    relational  go to state 93
    abs         go to state 36
    term        go to state 37
    factor      go to state 38
    power       go to state 39
    unary       go to state 40
    literal     go to state 41


State 71

   52 relational: relational GREATER • abs
   57 abs: • ABS abs ABS
   58    | • term
   59 term: • term PLUS factor
   60     | • term MINUS factor
   61     | • factor
   62 factor: • factor TIMES power
   63       | • factor DIVIDE power
   64       | • factor MODULO power
   65       | • power
   66 power: • power POW unary
   67      | • unary
   68 unary: • NOT unary
   69      | • MINUS unary
   70      | • literal
   71 literal: • "(" expression ")"
   72        | • INT
   73        | • DBL
   74        | • "true"
   75        | • "false"
   76        | • IDENT

    IDENT    shift, and go to state 23
    INT      shift, and go to state 24
    DBL      shift, and go to state 25
    MINUS    shift, and go to state 26
    NOT      shift, and go to state 27
    ABS      shift, and go to state 28
    "("      shift, and go to state 29
    "true"   shift, and go to state 30
    "false"  shift, and go to state 31
